@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-24T00:42:19Z",
-  "count_outdated" : 1835,
-  "uniques_outdated" : 626,
+  "timestamp" : "2023-10-24T08:12:46Z",
+  "count_outdated" : 1838,
+  "uniques_outdated" : 628,
   "count" : 1859,
   "uniques" : 639,
   "views" : [
-    {
-      "timestamp": "2023-10-10T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-10-12T00:00:00Z",
       "count": 3,
