@@ -1,12 +1,7 @@
 {
-  "count": 24,
-  "uniques": 13,
+  "count": 21,
+  "uniques": 11,
   "views": [
-    {
-      "timestamp": "2023-10-10T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-10-12T00:00:00Z",
       "count": 3,
